Add tracking session
